# api/swagger.yaml
@@ -74,6 +74,8 @@ paths:
     get:
       summary: Log out 
       operationId: Logout 
+      security:
+        - bearerAuth: []
       responses:
         200: 
           description: Log out successfully
@@ -112,12 +114,12 @@ paths:
           schema: 
             type: string
             enum:
-              - 
+              - all
               - art 
               - science
               - technology
               - cinema
-              - desgin
+              - design
               - food 
         - name: sort
           in: query
@@ -146,6 +148,8 @@ paths:
     post:
       summary: Add a new blog 
       operationId: createBlog
+      security:
+        - bearerAuth: []
       requestBody:
         $ref: '#/components/requestBodies/CreateBlogRequest'
         required: true
@@ -155,7 +159,7 @@ paths:
           content:
             application/json:
               schema: 
-                $ref: '#/components/schemas/GetBlogResponse'
+                $ref: '#/components/schemas/Blog'
         400:
           description: Bad request from user
           content:
@@ -209,6 +213,8 @@ paths:
     put:
       summary: Edit a blog
       operationId: updateBlog
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -284,6 +290,8 @@ paths:
 
     post:
       summary: Add a comment
+      security:
+        - bearerAuth: []
       requestBody:
         $ref: '#/components/requestBodies/CreateCommentRequest'
         required: true
@@ -350,6 +358,8 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse' 
     put:
       summary: Edit a comment
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -394,6 +404,8 @@ paths:
     
     delete:
       summary: Delete a comment
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -427,6 +439,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse' 
 components:
+  securitySchemes:
+    bearerAuth:            # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     GetBlogsResponse:
       type: object
@@ -542,7 +559,7 @@ components:
             - science
             - technology
             - cinema
-            - desgin
+            - design
             - food
         user_id:
           type: string
@@ -616,7 +633,7 @@ components:
                   - science
                   - technology
                   - cinema
-                  - desgin
+                  - design
                   - food 
               picture:
                 type: string
@@ -637,7 +654,7 @@ components:
                   - science
                   - technology
                   - cinema
-                  - desgin
+                  - design
                   - food 
               picture:
                 type: string
